Drop `.env` parsing from KlangCompiler