@@ -3,11 +3,6 @@
 
 # ==============================================================================
 # Builds a self-contained JAR of the klang compiler.
-#
-# Jar Usage: java --enable-preview -jar klangc.jar [OUTDIR SOURCEFILE [FILES...]]
-# - [OUTDIR SOURCEFILE [FILES...]]
-#       Semi-Optional outputpath and one or more input source file(s).
-#       If not specified a "klangc.env" file must define OUTDIR and SOURCEFILE.
 # ==============================================================================
 
 source ./scripts/compile_java.sh
